Thu Aug 11 15:37:42 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* variable.c (autoload_delete): An autoload entry is still in a
	  RCLASS_IV_TBL, not in a RCLASS_CONST_TBL, so take back the table
	  changed in r29600. And an autoload entry keeps not a
	  rb_const_entry_t but a NODE so remove rb_const_entry_t thing added
	  in r29602.

Thu Aug 11 15:07:36 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (link_command): use LIBRUBYARG in rbconfig for
	  unbundled extensions.  [ruby-core:38802] [Bug #5147]

	* lib/mkmf.rb (init_mkmf): revert r32902.  [ruby-core:38903]

Wed Aug 10 23:03:55 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb: fix argument check in the previous commit.

Wed Aug 10 22:12:28 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb (Socket.tcp): add :connect_timeout option.
	  (Addrinfo#connect_from): add :timeout option.
	  (Addrinfo#connect): ditto.
	  (Addrinfo#connect_to): ditto.
	  [ruby-core:38538]

Wed Aug 10 21:27:19 2011  Tanaka Akira  <akr@fsij.org>

	* lib/net/pop.rb: fix typo in document.

	* lib/net/http.rb: ditto.

	* lib/net/imap.rb: ditto.

Wed Aug 10 19:30:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* complex.c (nucomp_rationalize): calls rationalize of real part if
	  imaginary part is exactly zero.  The patch is made by Marc-Andre
	  Lafortune.  fixes [Bug #5178] [ruby-core:38885]

	* test/ruby/test_complex.rb (test_rationalize): add a test for the
	  above change.

	* complex.c (nucomp_to_r): fix RDoc comment.  The patch is made by
	  Marc-Andre Lafortune.

Wed Aug 10 14:11:07 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (init_mkmf): set $LIBRUBYARG regardless of shared
	  option.  [ruby-core:38802] [Bug #5147]

Wed Aug 10 02:53:27 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb: come back autoload. OpenSSL constant is used
	  some places, so it leads mistakes like HTTP.start.

Tue Aug  9 22:57:45 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>
