@@ -1,3 +1,7 @@
+Fri Aug 12 03:24:35 2011  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rdoc:  Import RDoc 3.9.2.  Fixes TIDYLINK for HTML output.
+
 Thu Aug 11 15:37:42 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>
 
 	* variable.c (autoload_delete): An autoload entry is still in a
